<resources>
    <string name="app_name">GPSTest</string>
    <string name="title_home">Status</string>
    <string name="title_dashboard">Speed</string>
    <string name="title_notifications">Compass</string>
    <string name="start">start</string>
    <string name="GPSTrackingService">GPS Tracking Service</string>
    <string name="Trackingbackground">Tracking your location in background</string>

    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="stop">Stop</string>
    <string name="reset">reset</string>

    <string name="location_info_title">Real-time Location Info</string>
    <string name="satellites_info">Satellites: %1$d(in use)/%2$d(in view)</string>
    <string name="coordinates_info">Lat: %1$.6f Lon: %2$.6f</string>
    <string name="coordinates_placeholder">Lat: ------ Lon: -----</string>
    <string name="altitude_info">Altitude: %1$.1f m</string>
    <string name="altitude_placeholder">Altitude: - m</string>
    <string name="speed_info">Speed: %1$.1f km/h | %2$.1f m/s</string>
    <string name="speed_placeholder">Speed: - km/h | - m/s</string>
    <string name="accuracy_info_full">H/V Accuracy: %1$.1f/%2$.1f m</string>
    <string name="accuracy_info_basic">Horiz Accuracy: %1$.1f m</string>
    <string name="accuracy_placeholder">H/V Accuracy: -/- m</string>
    <string name="gps_time_info">GPS Time(%1$s): %2$s</string>
    <string name="gps_time_placeholder">GPS Time(%1$s): -------</string>
    <string name="system_time_info">System Time: %1$s</string>

    <string name="direction_north">North</string>
    <string name="direction_northeast">NE</string>
    <string name="direction_east">East</string>
    <string name="direction_southeast">SE</string>
    <string name="direction_south">South</string>
    <string name="direction_southwest">SW</string>
    <string name="direction_west">West</string>
    <string name="direction_northwest">NW</string>
    <string name="direction_unknown">Unknown</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="time_format">Time: %s</string>
    <string name="max_speed_format">Max: %s km/h</string>
    <string name="distance_format">Distance: %s km</string>
    <string name="avg_speed_format">Avg: %s km/h</string>
    <string name="speed_kmh_format">%s km/h</string>
    <string name="speed_ms_format">%s m/s</string>
    <string name="direction_format">Direction: %s(%.0f°)</string>
    <string name="altitude_format">Altitude: %.1f m</string>
    <string name="satellites_format">Satellites:%d/%d</string>
    <string name="gps_status_strong">GPS: Strong(%.0f%%)</string>
    <string name="gps_status_medium">GPS: Medium(%.0f%%)</string>
    <string name="gps_status_weak">GPS: Weak(%.0f%%)</string>
    <string name="gps_status_lost">GPS: Signal lost</string>
    <string name="thewaitbegin">The wait begin...</string>

    <string name="privacy_policy_content">
        【Privacy Policy】\n\n
        1. How We Collect and Use Your Personal Information\n
        - Location Information: Used to provide accurate GPS positioning services\n
        - Device Information: Used to optimize app performance and compatibility\n\n
        2. Information Storage and Protection\n
        - All data is stored only on your device\n
        - We do not upload your data to any server\n\n
        3. Your Rights\n
        - You can turn off location permissions in settings at any time\n
        - You can uninstall the app to delete all data\n\n
        Last Updated: April 2025
    </string>

    <string name="version_format">Version: %s</string>
    <string name="version_unknown">Version: Unknown</string>
    <string name="language_default">Simplified Chinese</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>

    <string-array name="languages">
        <item>Simplified Chinese</item>
        <item>Japanese</item>
        <item>English</item>
        <item>Spanish</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <string-array name="language_codes">
        <item>zh</item>
        <item>ja</item>
        <item>en</item>
        <item>es</item>
        <item>de</item>
        <item>fr</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="general_settings">General Settings</string>
    <string name="enable_notifica">Enable notifications</string>
    <string name="auto_start">Auto Start</string>


</resources>